example/lib/src/generated/errors/errors_localization_ar.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Arabic (`ar`).
class ErrorsLocalizationAr extends ErrorsLocalization {
  ErrorsLocalizationAr([String locale = 'ar']) : super(locale);

  @override
  String get error => 'حدث خطأ';

  @override
  String get unexpectedError => 'حدث خطأ غير متوقع';

  @override
  String get bugReportSentText => 'تم إرسال تقرير الخطأ بنجاح.';
}

/// The translations for Arabic, as used in Egypt (`ar_EG`).
class ErrorsLocalizationArEg extends ErrorsLocalizationAr {
  ErrorsLocalizationArEg() : super('ar_EG');

  @override
  String get error => 'حدث خطأ';

  @override
  String get unexpectedError => 'حدث خطأ غير متوقع';

  @override
  String get bugReportSentText => 'تم إرسال تقرير الخطأ بنجاح.';
}
